--- a/public/dashboard/csss/style.css
+++ b/public/dashboard/csss/style.css
@@ -331,7 +331,7 @@ figure figcaption {
 --------------------------------------------------------------*/
 
 .hero-section {
-    background: linear-gradient(to right, rgba(39, 70, 133, 0.8) 0%, rgba(61, 179, 197, 0.8) 100%), url(../img/hero-bg.jpg);
+    background: linear-gradient(to right, rgba(39, 70, 133, 0.8) 0%, rgba(61, 179, 197, 0.8) 100%);
     position: relative;
 }
 
